# pepc-global-intensity

./: README.md  pyproject.toml
pepc_global_intensity/: __init__.py  _predict.py  _reach.py  _softmax.py  _ubound_schedule.py  _ubounds.py
pepc_global_intensity/data/: BEST_HMM_3_AS.pkl  BEST_HMM_3_BoB.pkl  BEST_HMM_3_ENP.pkl  BEST_HMM_3_NA.pkl  BEST_HMM_3_SI.pkl  BEST_HMM_3_SP.pkl  BEST_HMM_3_WNP.pkl  intensity_land_exp-predictors-dry-rough_AS_coeffs.npy  intensity_land_exp-predictors-dry-rough_AS_noise-sigma.npy  intensity_land_exp-predictors-dry-rough_BoB_coeffs.npy  intensity_land_exp-predictors-dry-rough_BoB_noise-sigma.npy  intensity_land_exp-predictors-dry-rough_ENP_coeffs.npy  intensity_land_exp-predictors-dry-rough_ENP_noise-sigma.npy  intensity_land_exp-predictors-dry-rough_NA_coeffs.npy  intensity_land_exp-predictors-dry-rough_NA_noise-sigma.npy  intensity_land_exp-predictors-dry-rough_SI_coeffs.npy  intensity_land_exp-predictors-dry-rough_SI_noise-sigma.npy  intensity_land_exp-predictors-dry-rough_SP_coeffs.npy  intensity_land_exp-predictors-dry-rough_SP_noise-sigma.npy  intensity_land_exp-predictors-dry-rough_WNP_coeffs.npy  intensity_land_exp-predictors-dry-rough_WNP_noise-sigma.npy  pi_historical_ubound_and_ssp245_quantiles_by_basin_model.tsv  pi_historical_ubound_and_ssp585_quantiles_by_basin_model.tsv
